# riscv-perf-model

./: CMakeLists.txt  coremark_report.out  dhrystone.zstf  trace.zstf
arches/: small_core.yaml
config/: pegasus.yaml  whisper.yaml
core/: CMakeLists.txt  CPUTopology.cpp  InstGenerator.cpp  InstGenerator.hpp  ROB.cpp  ROB.hpp  SimulationConfiguration.hpp
core/edm/: CMakeLists.txt  EDMBackendFactory.cpp  EDMBackendFactory.hpp  EDMCheckpoint.hpp  EDMFactory.cpp  EDMFactory.hpp  EDMInterface.hpp  EDMTypes.hpp
core/edm/adapters/Pegasus/: Pegasus.cpp  Pegasus.hpp
core/edm/adapters/Whisper/: Whisper.cpp  Whisper.hpp
core/edm/adapters/whisper/: WhisperEDMAdapter.cpp  WhisperEDMAdapter.hpp
core/fetch/: EnhancedBranchPred.cpp  EnhancedBranchPred.hpp  Fetch.cpp  Fetch.hpp
core/lsu/: LSU.cpp  LSU.hpp
sim/: OlympiaSim.cpp  OlympiaSim.hpp  main.cpp
